# soundforge

./: .gitignore  .soundforge.toml  .soundforge.toml.example  CLAUDE.md  LAUNCH_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  COMPETITIVE_LANDSCAPE.md  DECISIONS.md  FEATURES.md  IDEAL_FEATURE_LIST.md  IMPLEMENTATION_PLAN.md  PROJECT_OVERVIEW.md  ROADMAP.md  TODO.md  V0_5_EXECUTION_PLAN.md
soundforge/: __init__.py
soundforge/cli/: __init__.py  commands.py  formatting.py
soundforge/core/: __init__.py  analysis.py  batch.py  config.py  export.py  generate.py  pack.py  postprocess.py  preview.py  types.py  validation.py
soundforge/core/backends/: __init__.py  elevenlabs.py  stable_audio.py
tests/: test_analysis.py  test_backends.py  test_batch.py  test_cli.py  test_config.py  test_export.py  test_generate.py  test_pack.py  test_postprocess.py  test_preview.py  test_stable_audio.py  test_types.py
