[project]
name = "soundforge"
version = "0.1.0"
description = "AI-powered game audio asset generator and packaging tool"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Ameen" }]
keywords = ["game-audio", "sound-effects", "ai", "sfx", "gamedev"]

dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "numpy>=1.26",
    "soundfile>=0.12",
]

[project.optional-dependencies]
preview = ["sounddevice>=0.5"]
resample = ["scipy>=1.12"]
local-gpu = [
    "torch>=2.1",
    "torchaudio>=2.1",
    "diffusers>=0.27",
    "transformers>=4.36",
    "accelerate>=0.25",
    "torchsde>=0.2.6",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
soundforge = "soundforge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
